[gd_scene load_steps=3 format=3 uid="uid://tgcyw26sirqj"]

[ext_resource type="Script" path="res://Scripts/UI/GameMenu.gd" id="1_s07cs"]

[sub_resource type="LabelSettings" id="LabelSettings_b11vu"]
font_size = 45

[node name="GameMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_s07cs")

[node name="MainMenu" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0.0313726, 0.0666667, 0, 0.764706)

[node name="RichTextLabel" type="Label" parent="MainMenu"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -82.0
offset_top = 91.0
offset_right = 83.0
offset_bottom = 154.0
grow_horizontal = 2
text = "IdleCity"
label_settings = SubResource("LabelSettings_b11vu")

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu"]
custom_minimum_size = Vector2(130, 0)
layout_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -65.0
offset_top = -68.0
offset_right = 65.0
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2

[node name="NewGame" type="Button" parent="MainMenu/VBoxContainer"]
layout_mode = 2
text = "New Game"

[node name="SaveGame" type="Button" parent="MainMenu/VBoxContainer"]
layout_mode = 2
text = "Save"

[node name="LoadGame" type="Button" parent="MainMenu/VBoxContainer"]
layout_mode = 2
disabled = true
text = "Load"

[node name="Settings" type="Button" parent="MainMenu/VBoxContainer"]
layout_mode = 2
text = "Settings
"

[node name="Exit" type="Button" parent="MainMenu/VBoxContainer"]
layout_mode = 2
text = "Exit"

[node name="BackToMainMenu" type="Button" parent="MainMenu/VBoxContainer"]
layout_mode = 2
text = "Back To Main Menu"

[node name="Settings" type="ColorRect" parent="."]
visible = false
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0.0313726, 0.0666667, 0, 0.764706)

[node name="Settings" type="Label" parent="Settings"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -82.0
offset_top = 91.0
offset_right = 83.0
offset_bottom = 154.0
grow_horizontal = 2
text = "Settings"
label_settings = SubResource("LabelSettings_b11vu")

[node name="VBoxContainer" type="VBoxContainer" parent="Settings"]
custom_minimum_size = Vector2(130, 0)
layout_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -65.0
offset_top = -68.0
offset_right = 65.0
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2

[node name="ResetData" type="Button" parent="Settings/VBoxContainer"]
layout_mode = 2
text = "Reset Data"

[node name="Back" type="Button" parent="Settings/VBoxContainer"]
layout_mode = 2
text = "Back"

[connection signal="pressed" from="MainMenu/VBoxContainer/NewGame" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="MainMenu/VBoxContainer/SaveGame" to="." method="_on_save_game_pressed"]
[connection signal="pressed" from="MainMenu/VBoxContainer/LoadGame" to="." method="_on_load_game_pressed"]
[connection signal="pressed" from="MainMenu/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="MainMenu/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="MainMenu/VBoxContainer/BackToMainMenu" to="." method="_on_back_to_main_menu_pressed"]
[connection signal="pressed" from="Settings/VBoxContainer/ResetData" to="." method="_on_reset_data_pressed"]
[connection signal="pressed" from="Settings/VBoxContainer/Back" to="." method="_on_back_pressed"]
